--- a/LoginBackend20233/appsettings.json
+++ b/LoginBackend20233/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost; Port=5432; User Id=postgres; Password=nada123; Database=seguridad",
+    "DefaultConnection": "packet size=4096;user id=c3sar_SQLLogin_1;pwd=nupwssgq2y;data source=LoginPrueba2023.mssql.somee.com;persist security info=False;initial catalog=LoginPrueba2023;TrustServerCertificate=True",
     "SqlServer": "Server=Nombre;Database=seguridad;Trusted_Connection=True;"
   },
   "LlaveJWT": "hhv=%QUu{rtht.8*#-[?}e);X4&SV}J2[aF%CE]dU0bE!*vhUM",
